--- a/app/app.html
+++ b/app/app.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="../dist/bundle.js"></script>
   </body>
 </html>
