--- a/app/hot-dev-app.html
+++ b/app/hot-dev-app.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="http://localhost:3000/dist/bundle.js"></script>
   </body>
 </html>
